<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/login_bg" android:fillViewport="true">
    <RelativeLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <ProgressBar
                android:id="@+id/progress"
                android:visibility="gone"
                android:layout_width="wrap_content"
                android:layout_centerInParent="true"
                android:layout_height="wrap_content"/>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">


            <LinearLayout
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="88dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <TextView
                            android:fontFamily="@font/roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/title_app"
                            android:textColor="#ffffff"
                            android:textSize="31sp"/>

                </LinearLayout>


                <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="54.7dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#00000000"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>


                <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginEnd="33.6dp"
                        android:background="#00000000"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>

                <TextView
                        android:id="@+id/btn_login"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="53.8dp"
                        android:layout_marginEnd="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:background="@drawable/btn_login"
                        android:gravity="center_horizontal"
                        android:padding="16.4dp"
                        android:textAllCaps="true"
                        android:text="@string/logintxt"
                        android:textColor="#ffffff"
                        android:textSize="13.3sp"/>

            </LinearLayout>

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom"
                    android:orientation="vertical">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="127.7dp"
                        android:layout_marginEnd="33.6dp"
                        android:layout_marginBottom="23dp"
                        android:background="@drawable/bg_shape"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal"
                        android:padding="16.4dp">

                    <ImageView
                            android:contentDescription="@string/connect_fb"
                            android:layout_width="25dp"
                            android:layout_height="25dp"
                            android:layout_gravity="center_horizontal"
                            android:src="@drawable/ic_fb"/>

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="3dp"
                            android:fontFamily="@font/roboto_regular"
                            android:paddingLeft="20dp"
                            android:paddingRight="20dp"
                            android:text="@string/connect_fb"
                            android:textColor="#ffffff"
                            android:textSize="14.4sp"/>
                </LinearLayout>

                <LinearLayout
                        android:id="@+id/Linear"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="28.1dp"
                        android:gravity="center_horizontal"
                        android:orientation="horizontal">

                    <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no_account"
                            android:fontFamily="@font/roboto_regular"
                            android:textColor="#ffffff"
                            android:textSize="14.4sp"/>

                    <TextView
                            android:fontFamily="@font/roboto_regular"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="5dp"
                            android:text="@string/register"
                            android:id="@+id/link_signup"
                            android:textColor="#d22532"
                            android:textSize="14.4sp"/>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </RelativeLayout>
</ScrollView>
