<?xml version="1.0" encoding="utf-8"?>
<ScrollView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/login_bg"
            android:orientation="vertical">
        <RelativeLayout android:layout_width="match_parent"
                        android:layout_height="match_parent">

            <ProgressBar
                         android:id="@+id/progress"
                         android:visibility="gone"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_centerInParent="true"/>
            <LinearLayout
                    android:id="@+id/top_layout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">


                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="88dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                    <TextView
                            android:fontFamily="@font/roboto_bold"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:gravity="center"
                            android:text="@string/title_app"
                            android:textColor="#ffffff"
                            android:textSize="31sp"/>

                </LinearLayout>

                <EditText
                        android:id="@+id/input_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="54.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginEnd="33.6dp"
                        android:background="#00000000"
                        android:imeOptions="actionNext"
                        android:hint="@string/name"
                        android:inputType="text"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>
                <EditText
                        android:id="@+id/input_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="34.7dp"
                        android:layout_marginEnd="33.6dp"
                        android:imeOptions="actionNext"
                        android:background="#00000000"
                        android:fontFamily="@font/roboto_regular"
                        android:hint="@string/email"
                        android:inputType="textEmailAddress"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>

                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>


                <EditText
                        android:id="@+id/input_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginEnd="33.6dp"
                        android:imeOptions="actionNext"
                        android:background="#00000000"
                        android:hint="@string/password"
                        android:inputType="textPassword"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>


                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>
                <EditText
                        android:id="@+id/input_zip_code"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginEnd="33.6dp"
                        android:imeOptions="actionNext"
                        android:background="#00000000"
                        android:hint="@string/zip_code"
                        android:inputType="number"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>
                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>
                <EditText
                        android:id="@+id/input_country"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginEnd="33.6dp"
                        android:background="#00000000"
                        android:imeOptions="actionNext"
                        android:hint="@string/country"
                        android:inputType="text"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>


                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>

                <EditText
                        android:id="@+id/input_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:layout_marginEnd="33.6dp"
                        android:imeOptions="actionDone"
                        android:background="#00000000"
                        android:hint="@string/city"
                        android:inputType="text"
                        android:textColor="#ffffff"
                        android:textColorHint="#ffffff"
                        android:textSize="14.4sp"/>


                <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="6.5dp"
                        android:layout_marginEnd="33.6dp"
                        android:background="#33ffffff"/>

                <Button
                        android:id="@+id/btn_signup"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="34.6dp"
                        android:layout_marginTop="53.8dp"
                        android:layout_marginEnd="33.6dp"
                        android:fontFamily="@font/roboto_regular"
                        android:background="@drawable/btn_login"
                        android:gravity="center_horizontal"
                        android:padding="16.4dp"
                        android:text="@string/register"
                        android:enabled="false"
                        android:textColor="#ffffff"
                        android:textSize="13.3sp"/>

            </LinearLayout>
        </RelativeLayout>
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="vertical">

            <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="34.6dp"
                    android:layout_marginTop="127.7dp"
                    android:layout_marginEnd="33.6dp"
                    android:layout_marginBottom="23dp"
                    android:background="@drawable/bg_shape"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal"
                    android:padding="16.4dp">

                <ImageView
                        android:contentDescription="@string/photo"
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:layout_gravity="center_horizontal"
                        android:src="@drawable/ic_fb"/>

                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="3dp"
                        android:fontFamily="@font/roboto_regular"
                        android:paddingLeft="20dp"
                        android:paddingRight="20dp"
                        android:text="@string/connect_fb"
                        android:textColor="#ffffff"
                        android:textSize="14.4sp"/>
            </LinearLayout>

            <LinearLayout
                    android:id="@+id/Linear"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="28.1dp"
                    android:gravity="center_horizontal"
                    android:orientation="horizontal">
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>
</ScrollView>